# configuration

./: README.md  configuration.cabal  flake.nix  scripts.nix
example/: Main.hs
src/: Configuration.hs
src/Configuration/: Setting.hs
src/Configuration/Source/: Argv.hs  Custom.hs  Default.hs  Env.hs  Json.hs
