cabal-version: 3.0
name:          configuration
version:       0.0.0.1
-- synopsis:      $synopsis
description:   Multi-source config parsing based on higher kinded data.
category:      library, hdk, options, parsing
homepage:      https://github.com/solomon-b/configuration
bug-reports:   https://github.com/solomon-b/configuration/issues
author:        Solomon Bothwell
maintainer:    ssbothwell@gmail.com
license:       Apache-2.0
license-file:  LICENSE
build-type:    Simple

source-repository head
  type: git
  location: https://github.com/solomon-b/configuration

common common-opts
  default-extensions:
      LambdaCase
      OverloadedStrings
      ScopedTypeVariables
      TupleSections
      MultiWayIf
      InstanceSigs
      RecordWildCards
      NamedFieldPuns
      StrictData
      GADTs
      NoImplicitPrelude
      ImportQualifiedPost
      TypeApplications
  ghc-options:
      -Weverything -Wno-missing-exported-signatures
      -Wno-missing-import-lists -Wno-missing-export-lists
      -Wno-missed-specialisations -Wno-all-missed-specializations
      -Wno-unsafe -Wno-safe -Wno-missing-safe-haskell-mode
      -Wno-missing-local-signatures -Wno-monomorphism-restriction
      -Wno-prepositive-qualified-module
  build-depends:
      base
    , aeson
    , barbies
    , lens
    , optparse-applicative
    , text
  default-language: Haskell2010

library
  import: common-opts
  exposed-modules:
      Configuration
      Configuration.Setting
      Configuration.Source.Default
      Configuration.Source.Env
      Configuration.Source.Json
      Configuration.Source.Argv
  hs-source-dirs:
      src

executable configuration
  import: common-opts
  main-is: Main.hs
  exposed-modules:
      Main
  hs-source-dirs:
      example
  build-depends:
      configuration
    , lens-aeson

test-suite configuration-test
  import: common-opts
  type: exitcode-stdio-1.0
  main-is: Test.hs
  hs-source-dirs:
      test
  build-depends:
    , configuration
    , QuickCheck
    , hspec
    , hspec-expectations
